# jinsonic-ai-sdk

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_EN.md  build_sdk_sample.sh
doc/: PLUGIN_CONFIG_REFERENCE.md  PLUGIN_CONFIG_REFERENCE_EN.md  PLUGIN_CONFIG_REFERENCE_ZH.md  平台设备对接协议规范-V1.0.2.docx
doc/USER_MANUAL/: USER_MANUAL_EN.md  USER_MANUAL_ZH.md
example/jdk_alg_sample/: CMakeLists.txt  jdk_alg_sample.cpp
example/jdk_capture_sample/: CMakeLists.txt  jdk_capture_sample.cpp
example/jdk_frame_sample/: CMakeLists.txt  jdk_frame_sample.cpp
example/jdk_ivps_sample/: CMakeLists.txt  jdk_ivps_sample.cpp
example/jdk_netclient_vdec_sample/: CMakeLists.txt  jdk_netclient_sample.cpp
example/jdk_netserver_venc_sample/: CMakeLists.txt  jdk_netserver_sample.cpp
example/jdk_node_sample/: CMakeLists.txt  jdk_demo.cpp
example/jdk_npu_sample/: 1280x886_nv12.yuv  CMakeLists.txt  infer.cpp  main.cpp  yoloFace.cpp  yoloFace.hpp
example/jdk_venc_vdec_vo_sample/: readme.txt
include/: RegionAnalyzer.hpp  alg_comm.hpp  ax_algorithm_sdk.h  draw_registry.hpp  draw_strategy.hpp  node_factory.hpp  plugin_loader.hpp  sdk_interface.hpp
plugins/: CMakeLists.txt  PLUGIN_CONFIG_REFERENCE_EN.md  PLUGIN_CONFIG_REFERENCE_ZH.md  generate_config.cmake  package_plugin.cmake  readme.js  readme.md
plugins/.license/: license.json  pack_audit.json  plugin_signing_key.pem
plugins/alarm_plugin/: AlarmPusher.hpp  AlarmTTSMapping.hpp  CMakeLists.txt  JdkAlarmNode.cpp  JdkAlarmNode.hpp  SnapshotCleaner.hpp  TTSSpeaker.hpp  TTS_README.md  config_template.json.in  plugin_infer.cpp
plugins/catdog_plugin/: JdkCatDogDetectNode.cpp  JdkCatDogDetectNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/facedet_plugin/: CMakeLists.txt  JdkFaceDetectNode.cpp  JdkFaceDetectNode.hpp  SmoothBoxOverlay.hpp  config_template.json.in  plugin_infer.cpp  yoloFace.cpp  yoloFace.hpp
plugins/facedet_plugin/facedet_plugin/: plugin_infer.cpp  yoloFace.cpp  yoloFace.hpp
plugins/facedet_plugin/facedet_plugin/models/: yolov5n-face.axmodel
plugins/firedet_plugin/: CMakeLists.txt  JdkFireDetectNode.cpp  JdkFireDetectNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/hdmi_plugin/: CMakeLists.txt  JdkHdmiNode.cpp  JdkHdmiNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/netclient_plugin/: CMakeLists.txt  JdkNetlClientNode.cpp  JdkNetlClientNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/netserver_plugin/: JdkNetServerNode.cpp  JdkNetServerNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/osd_plugin/: CMakeLists.txt  JdkOsdNode.cpp  JdkOsdNode.hpp  config_template.json.in  plugin_infer.cpp
plugins/persondet_plugin/: CMakeLists.txt  JdkPersonDetectNode.cpp  JdkPersonDetectNode.hpp  config_template.json.in  plugin_infer.cpp
thirdpark/: install.tar
thirdpark/650nv3.10.2/aibox/include/: ax_dsp_cv_api.h  ax_ivps_api.h
thirdpark/650nv3.10.2/aibox/lib/: libax_pcie_dma.debug  libax_pcie_msg.debug  libsns_sc410gs.debug  libsns_sc910gs.debug
thirdpark/650nv3.6.2/axcl/axcl_linux_arm64.bak/include/: axcl_rt_engine.h
thirdpark/650nv3.6.2/axcl/axcl_linux_arm64.bak/lib/: libaxcl_dmadim.debug  libaxcl_dsp.debug  libaxcl_ive.debug  libaxcl_pcie_dma.debug  libaxcl_pcie_msg.debug  libaxcl_sys.debug  libaxcl_token.debug  libaxcl_vdec.debug  libaxcl_venc.debug
thirdpark/650nv3.6.2/axcl/axcl_linux_arm64/include/: axcl_rt_control.h  axcl_rt_p2p.h
thirdpark/650nv3.6.2/axcl/axcl_linux_arm64/ko/: ax_pcie_msg.ko
thirdpark/650nv3.6.2/axcl/axcl_linux_arm64/lib/: libaxcl_dsp.debug  libaxcl_vdec.debug
thirdpark/650nv3.6.2/axcl/axcl_linux_ax650/include/: axcl_rt.h  axcl_rt_device.h  axcl_rt_event.h  axcl_rt_memory.h  axcl_rt_stream.h
thirdpark/650nv3.6.2/axcl/axcl_linux_ax650/ko/: ax_pcie_host_dev.ko  ax_pcie_mmb.ko  ax_pcie_p2p_rc.ko  axcl_host.ko
thirdpark/650nv3.6.2/axcl/axcl_linux_ax650/lib/: libaxcl_dmadim.debug  libaxcl_ive.debug  libaxcl_pcie_dma.debug  libaxcl_pcie_msg.debug  libaxcl_sys.debug  libaxcl_token.debug  libaxcl_venc.debug
thirdpark/650nv3.6.2/axcl/axcl_linux_x86/include/: axcl_base.h  axcl_rt_type.h
thirdpark/650nv3.6.2/axcl/axcl_linux_x86/lib/: libaxcl_dmadim.debug  libaxcl_dsp.debug  libaxcl_pcie_dma.debug  libaxcl_pcie_msg.debug  libaxcl_sys.debug  libaxcl_token.debug  (+1 more)
thirdpark/650nv3.6.2/axcl/python/: pyAXCL-3.6.2-py3-none-any.whl
thirdpark/backend_plugin/include/: IConver.hpp  IEngine.hpp  IPlugin.hpp  ITensor.hpp  Tensor.hpp
thirdpark/comm/include/: AxSysLifecycle.hpp  AxVideoFrame.hpp  DevProtoDef.hpp  DeviceInfo.hpp  FrameRateLimiter.hpp  H26xDepayAssembler.hpp  HwCapture.hpp  HwColor.hpp  HwCover.hpp  HwDecoder.hpp  HwEncoder.hpp  HwIvps.hpp  IDecoder.hpp  IEncoder.hpp  IIvps.hpp  JdkOsd.hpp  MetricsReporter.hpp  NetClient.hpp  ResizeOptions.hpp  RtspClient.hpp  Task.hpp  TimestampedRingBuffer.hpp  anyx.hpp  authcaps.hpp  base64.hpp  context.h  contextManager.hpp  face_info.hpp  hdmi.h  json_utils.hpp  loong_rtc_sdk.h  loong_rtc_sdk_compat.h  post_node_info.h  rtsp_server.hpp  sample_ivps_sync_api.h  streamInfo.hpp  textbmp_renderer.hpp  vdec_deque.hpp
thirdpark/comm/include/gb28181/: gb28181.h  sp_define.h  sp_rec.h  tinystr.h  utl_iconv.h
thirdpark/comm/include/liburing/: compat.h
thirdpark/comm/lib/gb28181/: libeXosip2.la  libosip2.la  libosip2.so.13  libosipparser2.la  libosipparser2.so.13.0.0
thirdpark/curl/lib/: libcurl-gnutls.so.4
thirdpark/faiss/share/faiss/: faiss-targets-noconfig.cmake  faiss-targets.cmake
thirdpark/jdk/include/: jdk_control_meta.hpp  jdk_frame_meta.hpp  jdk_meta.hpp  jdk_node_base.hpp  jdk_node_wrapper.hpp  jdk_optional_handlers.hpp
thirdpark/libturbojpeg/lib/: libjpeg.so.62.4.0
thirdpark/libturbojpeg/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
thirdpark/live.bak/lib/: libUsageEnvironment.so.3.2.0  libgroupsock.so.30.2.0  libliveMedia.so.116
thirdpark/mqtt/lib/: libpaho-mqttpp3.so.1
thirdpark/sqlite/lib/: libsqlite3.so.0
thirdpark/tools/: pack-linux-amd64  pack-linux-arm64
thirdpark/websocket/include/: lws_config.h
thirdpark/websocket/lib/: libwebsockets.so.19
(+16 files in other folders)
